--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
     "version": "1.0.0",
     "main": "server.js",
     "dependencies": {
-      "express": "^4.18.2",
-      "cors": "^2.8.5",
-      "firebase-admin": "^11.10.0",
-      "dotenv": "^16.0.3"
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.21.2",
+        "firebase-admin": "^11.10.0"
     }
-  }
-  
+}
