--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
     "version": "1.0.0",
     "main": "server.js",
     "dependencies": {
+        "axios": "^1.8.4",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.21.2",
-        "firebase-admin": "^11.10.0"
+        "firebase-admin": "^11.10.0",
+        "form-data": "^4.0.2",
+        "multer": "^1.4.5-lts.2",
+        "nodemailer": "^6.10.0"
     }
 }
