--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-PORT=5000
+PROD_PORT=8080
+PORT=5555
 FIREBASE_DATABASE_URL=https://noteboost.firebaseio.com
 EMAIL_USER=backendnoteboost@gmail.com
 EMAIL_PASS=nmuyimekssfedsjv
+ENVIRONMENT=development
