--- a/package.json
+++ b/package.json
@@ -12,4 +12,7 @@
         "multer": "^1.4.5-lts.2",
         "nodemailer": "^6.10.0"
     }
+    "scripts": {
+        "start": "node server.js"
+    }
 }
