--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "noteboost-backend",
     "version": "1.0.0",
-    "main": "server.js",
+    "main": "index.js",
     "dependencies": {
         "axios": "^1.8.4",
         "cors": "^2.8.5",
@@ -13,7 +13,7 @@
         "nodemailer": "^6.10.0"
     },
     "scripts": {
-        "start": "node server.js"
+        "start": "node index.js"
     },
     "engines": {
         "node": "18.x"
