--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "express": "^4.21.2",
         "firebase-admin": "^11.10.0",
         "form-data": "^4.0.2",
+        "fs": "^0.0.1-security",
         "multer": "^1.4.5-lts.2",
         "nodemailer": "^6.10.0"
     },
