--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "firebase-admin": "^11.10.0",
         "form-data": "^4.0.2",
         "fs": "^0.0.1-security",
+        "googleapis": "^148.0.0",
         "multer": "^1.4.5-lts.2",
         "nodemailer": "^6.10.0"
     },
