--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "main": "server.js",
     "dependencies": {
+        "@google-cloud/vision": "^5.1.0",
         "axios": "^1.8.4",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
