--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "fs": "^0.0.1-security",
         "googleapis": "^148.0.0",
         "multer": "^1.4.5-lts.2",
-        "nodemailer": "^6.10.0"
+        "nodemailer": "^6.10.0",
+        "quill-delta-to-html": "^0.12.1"
     },
     "scripts": {
         "start": "node server.js"
